# indo-gpr-index

./: .gitignore  CONTRIBUTTING.md  Makefile  README.md  conftest.py  main_pipeline.py  pyproject.toml  run_pipeline.py
.github/: CI_SETUP.md
.github/workflows/: pipeline.yml
config/: settings.py
dbt_project/: README.md  dbt_project.yml  profiles.yml
dbt_project/macros/: gpr_flags.sql  gpr_keyword_lists.sql  match_keywords.sql
dbt_project/models/marts/: mart_gpr_audit.sql  mart_gpr_daily.sql  mart_gpr_monthly.sql  mart_gpr_weekly.sql  schema.yml
dbt_project/models/staging/: sources.yml  stg_antara_news.sql  stg_scraped_news.sql
scripts/: try_parser.py
src/: export_table.py  load_to_db.py  main_scraper.py
src/database/: connection.py
src/exports/: gsheet_client.py
src/pipelines/: run_pipeline.py
src/scraper/: PARSER_INFO.md  base_parser.py  engine.py  main_scraper.py  parser.py
src/scraper/parsers/: __init__.py  antara.py  detik.py  kompas.py  tempo.py  tribunnews.py
tests/: conftest.py  test_export.py  test_export_table.py  test_load_to_db.py  test_parsers.py  test_scraper.py
