[project]
name = "indo-gpr-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "gspread>=6.2.1",
    "lxml>=6.1.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "requests-mock>=1.12.1",
]
